--- a/SmartSales/app/src/main/res/layout/fragment_comparing.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_comparing.xml
@@ -5,12 +5,15 @@
     android:background="@drawable/settings_bg">
 
 
-    <TextView
+   <WebView
+       android:id="@+id/compare_webview"
+       android:layout_width="fill_parent"
+       android:layout_height="fill_parent"
+       />
+
+    <ProgressBar
+        android:id="@+id/progress_compare"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="COMPARING"
-        android:id="@+id/textView"
-        android:textSize="30sp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerInParent="true"/>
 </RelativeLayout>
