--- a/SmartSales/app/src/main/res/layout/fragment_style_exterior.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_style_exterior.xml
@@ -22,6 +22,12 @@
             android:layout_height="fill_parent">
 
         </RelativeLayout>
+        <!--<ImageView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginLeft="939dp"-->
+            <!--android:layout_marginTop="717dp"-->
+            <!--android:src="@drawable/btn_add_plus"/>-->
     </RelativeLayout>
 
     <RelativeLayout
