--- a/SmartSales/app/src/main/res/layout/fragment_style_interior.xml
+++ b/SmartSales/app/src/main/res/layout/fragment_style_interior.xml
@@ -18,18 +18,24 @@
             />
 
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/interior_main_image_layout"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:visibility="visible">
-            <ImageView
-                android:id="@+id/interior_main_image"
-                android:layout_width="940dp"
-                android:layout_height="fill_parent"
-                android:scaleType="fitXY"
-                android:visibility="gone"/>
-        </RelativeLayout>
+            <!--<AbsoluteLayout-->
+                <!--android:layout_width="fill_parent"-->
+                <!--android:layout_height="fill_parent">-->
+            <!--<ImageView-->
+                <!--android:id="@+id/interior_main_image"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:src="@drawable/btn_add_plus"-->
+                <!--android:layout_y="287dp"-->
+                <!--android:layout_x="713dp"-->
+                <!--android:visibility="visible"/>-->
+            <!--</AbsoluteLayout>-->
+        </LinearLayout>
 
 
     </RelativeLayout>
