--- a/SmartSales/app/src/main/res/layout/customer_managment_list_item.xml
+++ b/SmartSales/app/src/main/res/layout/customer_managment_list_item.xml
@@ -1,26 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/settings_bg">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <!--<ImageView-->
-        <!--android:id="@+id/listTopView"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignParentTop="true"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:layout_marginTop="45dp"-->
-        <!--android:src="@drawable/customer_list_top" />-->
     <LinearLayout
         android:id="@+id/listTopView"
         android:layout_width="1200dp"
         android:layout_height="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal"
         android:layout_below="@+id/view"
-        android:background="@drawable/message_top_gradient"
         android:layout_centerHorizontal="true"
+        android:background="#bdbdbd"
         >
         <View
             android:layout_width="1dp"
@@ -28,6 +19,7 @@
             android:background="#bdbdbd" />
 
         <com.hyundai.teli.smartsales.views.HTextView
+            android:id="@+id/customerId"
             android:layout_width="100dp"
             android:layout_height="fill_parent"
             android:gravity="center"
@@ -40,6 +32,7 @@
             android:background="#bdbdbd" />
 
         <com.hyundai.teli.smartsales.views.HTextView
+            android:id="@+id/customerName"
             android:layout_width="400dp"
             android:layout_height="fill_parent"
             android:gravity="center"
@@ -51,6 +44,7 @@
             android:layout_height="40dp"
             android:background="#bdbdbd" />
         <com.hyundai.teli.smartsales.views.HTextView
+            android:id="@+id/customerModel"
             android:layout_width="200dp"
             android:layout_height="fill_parent"
             android:gravity="center"
@@ -62,6 +56,7 @@
             android:layout_height="40dp"
             android:background="#bdbdbd" />
         <com.hyundai.teli.smartsales.views.HTextView
+            android:id="@+id/customerMobileNo"
             android:layout_width="200dp"
             android:layout_height="fill_parent"
             android:gravity="center"
@@ -74,6 +69,7 @@
             android:background="#bdbdbd" />
 
         <com.hyundai.teli.smartsales.views.HTextView
+            android:id="@+id/customerEqDate"
             android:layout_width="150dp"
             android:layout_height="fill_parent"
             android:gravity="center"
@@ -86,6 +82,7 @@
             android:background="#bdbdbd" />
 
         <com.hyundai.teli.smartsales.views.HTextView
+            android:id="@+id/customerNFDate"
             android:layout_width="145dp"
             android:layout_height="fill_parent"
             android:gravity="center"
@@ -97,45 +94,5 @@
             android:layout_height="40dp"
             android:background="#bdbdbd" />
     </LinearLayout>
-    <View
-        android:layout_below="@+id/listTopView"
-        android:layout_width="1200dp"
-        android:layout_height="2dp"
-        android:background="@color/profile_title_blue"
-        android:layout_centerHorizontal="true"/>
 
-
-    <ListView
-        android:id="@+id/listViewcustomer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/registerButton"
-        android:layout_alignLeft="@id/listTopView"
-        android:layout_alignRight="@id/listTopView"
-        android:layout_below="@id/listTopView"
-        android:layout_marginTop="2dp"
-        android:background="#d6d6d6"
-        android:divider="#d6d6d6"
-        android:dividerHeight="1dp"></ListView>
-
-    <Button
-        android:id="@+id/registerButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="41dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="40dp"
-        android:layout_marginTop="42dp"
-        android:background="@drawable/customer_btn_register" />
-
-    <!--<Button-->
-        <!--android:id="@+id/deleteButton"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_alignBottom="@id/registerButton"-->
-        <!--android:layout_toLeftOf="@+id/registerButton"-->
-        <!--android:background="@drawable/customer_btn_delete" />-->
-
-</RelativeLayout>
+</LinearLayout>
